grammar.js
		root:               $ => repeat(choice(
			$.program,
			$.library,
			$.unit,
			$._definition
		)),

		// HIGH LEVEL ----------------------------------------------------------

		assignment:      $ => op.infix(1,
			choice($._expr, $.varAssignDef),
			choice(
				$.kAssign,
				...enable_if(fpc,
					$.kAssignAdd, $.kAssignSub, $.kAssignMul, $.kAssignDiv
				)
			),
			$._expr
		),
		_expr:           $ => choice(
			$._ref, $.exprBinary, $.exprUnary, $.exprIf
		),

		_ref:            $ => choice(
			...enable_if(templates && fpc,
				prec.left(choice(
					seq($.kSpecialize, $.identifier),
					seq(alias($.kSpecialize, $.identifier)),
				))
			),
			$.identifier,
			$._literal,  $.inherited, $.exprDot,
			$.exprBrackets, $.exprParens, $.exprSubscript, $.exprCall,
			alias($.exprDeref, $.exprUnary),
			alias($.exprAs, $.exprBinary),
			...enable_if(templates, $.exprTpl),
			...enable_if(lambda, $.lambda)
		),

		exprBinary:      $ => choice(
			op.infix(1, $._expr, $.kLt,  $._expr),
			op.infix(1, $._ref,  $.kLt,  $._expr),
			op.infix(1, $._expr, $.kEq,  $._expr),
			op.infix(1, $._expr, $.kNeq, $._expr),
			op.infix(1, $._expr, $.kGt,  $._expr),
			op.infix(1, $._expr, $.kLte, $._expr),
			op.infix(1, $._expr, $.kGte, $._expr),
			op.infix(1, $._expr, $.kIn,  $._expr),
			op.infix(1, $._expr, $.kNotIn, $._expr),
			op.infix(1, $._expr, $.kIs,  $._expr),
			op.infix(1, $._expr, $.kIsNot, $._expr),

			op.infix(2, $._expr, $.kAdd, $._expr),
			op.infix(2, $._expr, $.kSub, $._expr),
			op.infix(2, $._expr, $.kOr,  $._expr),
			op.infix(2, $._expr, $.kXor, $._expr),

			op.infix(3, $._expr, $.kMul, $._expr),
			op.infix(3, $._expr, $.kFdiv,$._expr),
			op.infix(3, $._expr, $.kDiv, $._expr),
			op.infix(3, $._expr, $.kMod, $._expr),
			op.infix(3, $._expr, $.kAnd, $._expr),
			op.infix(3, $._expr, $.kShl, $._expr),
			op.infix(3, $._expr, $.kShr, $._expr),
		),

		exprUnary:       $ => choice(
			op.prefix(4,  $.kNot,  $._expr),
			op.prefix(4,  $.kAdd,  $._expr),
			op.prefix(4,  $.kSub,  $._expr),
			op.prefix(4,  $.kAt,   $._expr),
		),

		exprParens:      $ => prec.left(5,seq('(', $._expr, ')')),

		exprBrackets:       $ => seq(
			'[', delimited(choice($._expr, $.range)), ']'
		),

		// TYPES ---------------------------------------------------------------

		literalNumber:   $ => choice($._literalInt, $._literalFloat),
		_literalInt:     $ => choice(
			token.immediate(/[-+]?[0-9][0-9_]*/),
			token.immediate(/\$[a-fA-F0-9][a-fA-F0-9_]*/),
			token.immediate(/%[01][01_]*/)
		),
		_literalFloat:   $ => prec(10, choice(
			/[-+]?([0-9][0-9_]*)?\.?[0-9][0-9_]*e[+-]?[0-9][0-9_]*/i,
			/[-+]?([0-9][0-9_]*)?\.[0-9][0-9_]*/i
		)),

		_definitions:    $ => repeat1($._definition),
		_definition:     $ => choice(
			$.declTypes, $.declVars, $.declConsts, $.defProc,
			alias($.declProcFwd, $.declProc),
			$.declLabels, $.declUses, $.declExports
		),

		defProc:         $ => seq(
			field('header', $.declProc),
			pp(
			 	$,
				pp($, field('local', optional($._definitions))),
				field('body', choice(tr($, 'block'), tr($, 'asm'))),
				';'
			)
		),

		declProc:        $ => seq(
			...enable_if(rtti, optional($.rttiAttributes)),
			choice($._declProc, $._declOperator),
		),

		_declProc:       $ => seq(
			...enable_if(fpc, optional($.kGeneric)),
			optional($.kClass),
			choice($.kProcedure, $.kFunction, $.kConstructor, $.kDestructor),
			field('name', $._genericName),
			field('args', optional($.declArgs)),
			optional(seq(
				':',
				field('type', $.typeref),
			)),
			field('assign', optional($.defaultValue)),
			';',
			repeat($._procAttributeNoExt)
		),

		_declOperator:   $ => seq(
			optional($.kClass),
			$.kOperator,
			field('name', $._operatorName),
			field('args', optional($.declArgs)),
			...enable_if(fpc, field('resultName', optional($.identifier))),
			optional(seq(':', field('type', $.type))),
			field('assign', optional($.defaultValue)),
			';',
			repeat($._procAttributeNoExt)
		),

		kBegin:            $ => /begin/i,
		kEnd:              $ => /end/i,
		kAssign:           $ => ':=',
		kOr:               $ => /or/i,
		kAnd:              $ => /and/i,
		kNot:              $ => /not/i,
		kIsNot:            $ => /[iI][sS]\s+[nN][oO][tT]/,
		kNotIn:            $ => /[nN][oO][tT]\s+[iI][nN]/,

		kProcedure:        $ => /procedure/i,
		kTrue:             $ => /true/i,
		identifier:        $ => /[&]?[a-zA-Z_]+[0-9_a-zA-Z$]*/,
