test/corpus/diabolical-logical.txt
===
Fuzzed Logical 1
===
procedure Test;
begin
  BVal := (not True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (kTrue)))) (kEnd))))

===
Fuzzed Logical 2
===
procedure Test;
begin
  BVal := (Obj is not TMyClass);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))) (kEnd))))

===
Fuzzed Logical 3
===
procedure Test;
begin
  BVal := (A not in [1, 2, 3]);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))) (kEnd))))

===
Fuzzed Logical 4
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) and (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 5
===
procedure Test;
begin
  BVal := (not (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 6
===
procedure Test;
begin
  BVal := (BVal or BVal);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (identifier) (kOr) (identifier)))) (kEnd))))

===
Fuzzed Logical 7
===
procedure Test;
begin
  BVal := True;
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (kTrue)) (kEnd))))

===
Fuzzed Logical 8
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) or (not (BVal and BVal)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kOr) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kAnd) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 9
===
procedure Test;
begin
  BVal := (BVal and BVal);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (identifier) (kAnd) (identifier)))) (kEnd))))

===
Fuzzed Logical 10
===
procedure Test;
begin
  BVal := ((BVal and BVal) and True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kAnd) (kTrue)))) (kEnd))))

===
Fuzzed Logical 11
===
procedure Test;
begin
  BVal := (True and (BVal or BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kAnd) (exprParens (exprBinary (identifier) (kOr) (identifier)))))) (kEnd))))

===
Fuzzed Logical 12
===
procedure Test;
begin
  BVal := (not (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 13
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) or True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kOr) (kTrue)))) (kEnd))))

===
Fuzzed Logical 14
===
procedure Test;
begin
  BVal := (not (BVal and BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kAnd) (identifier)))))) (kEnd))))

===
Fuzzed Logical 15
===
procedure Test;
begin
  BVal := ((not BVal) or True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (identifier))) (kOr) (kTrue)))) (kEnd))))

===
Fuzzed Logical 16
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) and (BVal and BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kAnd) (identifier)))))) (kEnd))))

===
Fuzzed Logical 17
===
procedure Test;
begin
  BVal := (not ((Obj is not TMyClass) and (A not in [1, 2, 3])));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))))) (kEnd))))

===
Fuzzed Logical 18
===
procedure Test;
begin
  BVal := ((not True) and True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (kTrue))) (kAnd) (kTrue)))) (kEnd))))

===
Fuzzed Logical 19
===
procedure Test;
begin
  BVal := ((not BVal) or (BVal or BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (identifier))) (kOr) (exprParens (exprBinary (identifier) (kOr) (identifier)))))) (kEnd))))

===
Fuzzed Logical 20
===
procedure Test;
begin
  BVal := ((BVal and BVal) or (BVal or BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kOr) (exprParens (exprBinary (identifier) (kOr) (identifier)))))) (kEnd))))

===
Fuzzed Logical 21
===
procedure Test;
begin
  BVal := (True and (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kAnd) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 22
===
procedure Test;
begin
  BVal := (not BVal);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (identifier)))) (kEnd))))

===
Fuzzed Logical 23
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) and (not (Obj is not TMyClass)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 24
===
procedure Test;
begin
  BVal := (True or (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 25
===
procedure Test;
begin
  BVal := (not ((BVal and BVal) or (A not in [1, 2, 3])));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kOr) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))))) (kEnd))))

===
Fuzzed Logical 26
===
procedure Test;
begin
  BVal := ((not (BVal or BVal)) or (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kOr) (identifier))))) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 27
===
procedure Test;
begin
  BVal := (not (not BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprUnary (kNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 28
===
procedure Test;
begin
  BVal := (not ((A not in [1, 2, 3]) or (Obj is not TMyClass)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 29
===
procedure Test;
begin
  BVal := (not ((Obj is not TMyClass) or (not BVal)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kOr) (exprParens (exprUnary (kNot) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 30
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) or (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 31
===
procedure Test;
begin
  BVal := ((True and (BVal and BVal)) or (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (kTrue) (kAnd) (exprParens (exprBinary (identifier) (kAnd) (identifier))))) (kOr) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 32
===
procedure Test;
begin
  BVal := ((not True) or (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (kTrue))) (kOr) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 33
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) or True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (kTrue)))) (kEnd))))

===
Fuzzed Logical 34
===
procedure Test;
begin
  BVal := (not ((not BVal) or (not BVal)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprUnary (kNot) (identifier))) (kOr) (exprParens (exprUnary (kNot) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 35
===
procedure Test;
begin
  BVal := (True or (BVal and BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kOr) (exprParens (exprBinary (identifier) (kAnd) (identifier)))))) (kEnd))))

===
Fuzzed Logical 36
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) and (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kAnd) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 37
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) and (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 38
===
procedure Test;
begin
  BVal := (((Obj is not TMyClass) and (Obj is not TMyClass)) or (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kIsNot) (identifier))))) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 39
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) or (not BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (exprParens (exprUnary (kNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 40
===
procedure Test;
begin
  BVal := (not ((BVal and BVal) and (not BVal)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kAnd) (exprParens (exprUnary (kNot) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 41
===
procedure Test;
begin
  BVal := ((BVal and BVal) or True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kOr) (kTrue)))) (kEnd))))

===
Fuzzed Logical 42
===
procedure Test;
begin
  BVal := (((BVal and BVal) and (BVal and BVal)) and ((A not in [1, 2, 3]) and (A not in [1, 2, 3])));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kAnd) (identifier))))) (kAnd) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kAnd) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))))) (kEnd))))

===
Fuzzed Logical 43
===
procedure Test;
begin
  BVal := ((not BVal) and (Obj is not TMyClass));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 44
===
procedure Test;
begin
  BVal := (True or (not BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kOr) (exprParens (exprUnary (kNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 45
===
procedure Test;
begin
  BVal := (True and True);
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kAnd) (kTrue)))) (kEnd))))

===
Fuzzed Logical 46
===
procedure Test;
begin
  BVal := ((not (BVal or BVal)) or (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kOr) (identifier))))) (kOr) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 47
===
procedure Test;
begin
  BVal := (not (BVal or BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kOr) (identifier)))))) (kEnd))))

===
Fuzzed Logical 48
===
procedure Test;
begin
  BVal := (not (True or True));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (kTrue) (kOr) (kTrue)))))) (kEnd))))

===
Fuzzed Logical 49
===
procedure Test;
begin
  BVal := (not (True and True));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprUnary (kNot) (exprParens (exprBinary (kTrue) (kAnd) (kTrue)))))) (kEnd))))

===
Fuzzed Logical 50
===
procedure Test;
begin
  BVal := (True or (A not in [1, 2, 3]));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (kTrue) (kOr) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))) (kEnd))))

===
Fuzzed Logical 51
===
procedure Test;
begin
  BVal := ((not BVal) or (BVal and BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (identifier))) (kOr) (exprParens (exprBinary (identifier) (kAnd) (identifier)))))) (kEnd))))

===
Fuzzed Logical 52
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) and (not (A not in [1, 2, 3])));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kAnd) (exprParens (exprUnary (kNot) (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber))))))))) (kEnd))))

===
Fuzzed Logical 53
===
procedure Test;
begin
  BVal := ((not (not BVal)) and ((BVal and BVal) and (BVal or BVal)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprUnary (kNot) (exprParens (exprUnary (kNot) (identifier))))) (kAnd) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kAnd) (identifier))) (kAnd) (exprParens (exprBinary (identifier) (kOr) (identifier)))))))) (kEnd))))

===
Fuzzed Logical 54
===
procedure Test;
begin
  BVal := ((Obj is not TMyClass) and (not BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kIsNot) (identifier))) (kAnd) (exprParens (exprUnary (kNot) (identifier)))))) (kEnd))))

===
Fuzzed Logical 55
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) or (BVal or BVal));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (exprParens (exprBinary (identifier) (kOr) (identifier)))))) (kEnd))))

===
Fuzzed Logical 56
===
procedure Test;
begin
  BVal := ((A not in [1, 2, 3]) and ((A not in [1, 2, 3]) or (Obj is not TMyClass)));
end;
---
(root (defProc (declProc (kProcedure) (identifier)) (block (kBegin) (assignment (identifier) (kAssign) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kAnd) (exprParens (exprBinary (exprParens (exprBinary (identifier) (kNotIn) (exprBrackets (literalNumber) (literalNumber) (literalNumber)))) (kOr) (exprParens (exprBinary (identifier) (kIsNot) (identifier)))))))) (kEnd))))

